@@ -24,6 +24,7 @@ t/data/cdata3.sgml
 t/data/cdata4.sgml
 t/data/char1.sgml
 t/data/char2.sgml
+t/data/char3.sgml
 t/data/comment1.sgml
 t/data/comment2.sgml
 t/data/doctype1.sgml
