@@ -3,7 +3,7 @@ use warnings;
 
 use File::Object;
 use SGML::PYX;
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -37,3 +37,21 @@ stdout_is(
 	$right_ret,
 	'Test advanced character data.',
 );
+
+# Test.
+SKIP: {
+	skip '\'<\' in character data', 1;
+
+$obj = SGML::PYX->new;
+$right_ret = <<'END';
+-for (var i = 0; i < results.length; i++) {alert(i);}\n
+END
+stdout_is(
+	sub {
+		$obj->parsefile($data_dir->file('char3.sgml')->s);
+		return;
+	},
+	$right_ret,
+	'Test character data with javascript (<).',
+);
+};
