@@ -1,4 +1,5 @@
 0.07
+ - Add (not fixed) test for javascript in character data (with <).
  - Fix bugtracker.
  - Fix processing of UTF8 attribute value.
  - Improve source code in doc.
